[gd_scene load_steps=21 format=3 uid="uid://damvskku830yr"]

[ext_resource type="Script" path="res://scripts/enemies/enemy_base.gd" id="1_q7r62"]
[ext_resource type="ArrayMesh" uid="uid://cmr5d5t2a4aiy" path="res://assets/models/Ultimate Spaceships/Challenger/OBJ/Challenger.obj" id="1_t6r4v"]
[ext_resource type="Texture2D" uid="uid://c8qxpo0l4f3lh" path="res://assets/models/Ultimate Spaceships/Challenger/Textures/Challenger_Red.png" id="2_tg8hh"]
[ext_resource type="PackedScene" uid="uid://bgocnol6lncjd" path="res://objects/indicator_example.tscn" id="3_s0ged"]
[ext_resource type="PackedScene" uid="uid://dnlbkq43d34y3" path="res://objects/flames/purple_flame.tscn" id="5_oqqlt"]
[ext_resource type="Shader" uid="uid://bid4x5lk8b8bf" path="res://assets/shaders/flame.tres" id="6_dn67s"]
[ext_resource type="Texture2D" uid="uid://c0vqpubvs84w0" path="res://assets/models/Julius/muzzleflash.png" id="7_0wbq6"]
[ext_resource type="AudioStream" uid="uid://dbwyoo7ci7abk" path="res://assets/audio/Kenney/SciFi/explosionCrunch_000.ogg" id="8_wd3fo"]
[ext_resource type="AudioStream" uid="uid://b65stun7ufvf0" path="res://assets/audio/Kenney/SciFi/impactMetal_003.ogg" id="9_govh8"]
[ext_resource type="AudioStream" uid="uid://c8j8nblowm3mc" path="res://assets/audio/Kenney/SciFi/explosionCrunch_001.ogg" id="10_j7olt"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3nua4"]
size = Vector3(5.30225, 4.64453, 1.89136)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5twpm"]
albedo_texture = ExtResource("2_tg8hh")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n2jgr"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("6_dn67s")
shader_parameter/Tint = Color(0.537255, 0, 1, 1)
shader_parameter/FlashTexture = ExtResource("7_0wbq6")

[sub_resource type="Gradient" id="Gradient_wx43r"]
offsets = PackedFloat32Array(0, 0.0945122, 0.496951, 0.844512)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0.18, 0.18, 0.18, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_bgdtu"]
gradient = SubResource("Gradient_wx43r")

[sub_resource type="Curve" id="Curve_hyexw"]
max_value = 4.0
_data = [Vector2(0, 4), 0.0, -10.577, 0, 0, Vector2(0.99999, 0), -6.17736, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_qti4a"]
curve = SubResource("Curve_hyexw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_m5wg0"]
lifetime_randomness = 0.3
angle_min = -90.0
angle_max = 90.0
spread = 180.0
initial_velocity_min = 5.0
initial_velocity_max = 20.0
angular_velocity_min = -360.0
angular_velocity_max = 360.0
gravity = Vector3(0, 0, 0)
linear_accel_min = -2.0
linear_accel_max = -1.0
scale_min = 0.3
scale_curve = SubResource("CurveTexture_qti4a")
color_ramp = SubResource("GradientTexture1D_bgdtu")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vo4co"]
shading_mode = 0
vertex_color_use_as_albedo = true
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_tr3na"]
material = SubResource("StandardMaterial3D_vo4co")
size = Vector2(0.2, 0.2)

[node name="EnemyBase" type="Area3D" groups=["Enemy"]]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
collision_layer = 64
collision_mask = 512
script = ExtResource("1_q7r62")

[node name="WeaponAttachPoint" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.55, 0, 0)
gizmo_extents = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.41615, -0.105943, 0.0925121)
shape = SubResource("BoxShape3D_3nua4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 1.099, 0, 0)
mesh = ExtResource("1_t6r4v")
surface_material_override/0 = SubResource("StandardMaterial3D_5twpm")

[node name="Indicator" parent="." instance=ExtResource("3_s0ged")]
unique_name_in_owner = true
transform = Transform3D(0.999999, 0, 0, 0, 1, -3.55271e-15, 0, 3.55271e-15, 1, 0, -2.66667, 0)
editor_preview = true

[node name="PurpleFlame" parent="." instance=ExtResource("5_oqqlt")]
transform = Transform3D(-1.62921e-06, 0, -15, 0, 10, 0, 10, 0, -2.44381e-06, 4.53876, 0, 0)
surface_material_override/0 = SubResource("ShaderMaterial_n2jgr")
surface_material_override/1 = SubResource("ShaderMaterial_n2jgr")
surface_material_override/2 = SubResource("ShaderMaterial_n2jgr")

[node name="HitAudio" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_wd3fo")

[node name="HitShieldAudio" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_govh8")
volume_db = 3.0

[node name="DestroyedAudio" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(3.33333, 0, 0, 0, 3.33333, 0, 0, 0, 3.33333, 0, 0, 0)
stream = ExtResource("10_j7olt")

[node name="ExplosionParticles" type="GPUParticles3D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 30
lifetime = 2.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_m5wg0")
draw_pass_1 = SubResource("QuadMesh_tr3na")

[node name="IonTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="IonTimer" to="." method="_on_ion_timer_timeout"]
